--- a/examples/showcase/post-processing/message.html
+++ b/examples/showcase/post-processing/message.html
@@ -2,7 +2,7 @@
 
 <p>
     <strong>Desktop:</strong>Mouse and Keyboard support<br>
-    <strong>VR:</strong>Targeted to Quest 3 for performance reasons<br>
+    <strong>VR:</strong>Targeted to Quest 3 for performance reasons, press any button to toggle effect<br>
 </p>
 
 <p>
