--- a/examples/showcase/tsl/index.html
+++ b/examples/showcase/tsl/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>TSL • A-Frame</title>
-    <meta name="description" content="TSL • A-Frame" />
+    <title>WebGPURenderer and TSL • A-Frame</title>
+    <meta name="description" content="WebGPURenderer and TSL • A-Frame" />
     <script type="importmap">
       {
         "imports": {
