--- a/examples/index.html
+++ b/examples/index.html
@@ -158,7 +158,7 @@
       <li><a href="mixed-reality/anchor/">Anchor (Mixed Reality)</a></li>
       <li><a href="mixed-reality/real-world-meshing/">Real World Meshing (Mixed Reality)</a></li>
       <li><a href="boilerplate/importmap/">Importmap (import teapot geometry from three/addons)</a></li>
-      <li><a href="showcase/tsl/">WebGPURenderer and TSL</a></li>
+      <li><a href="showcase/webgpu/">WebGPURenderer and TSL</a></li>
     </ul>
 
     <h2>Examples from Documentation</h2>
