reformat to 120 chars

--- a/examples/showcase/webgpu/message.html
+++ b/examples/showcase/webgpu/message.html
@@ -2,11 +2,6 @@
   Galaxy
   <br />
   Based on
-  <a
-    href="https://threejs-journey.com/lessons/animated-galaxy"
-    target="_blank"
-    rel="noopener"
-    >Three.js Journey</a
-  >
+  <a href="https://threejs-journey.com/lessons/animated-galaxy" target="_blank" rel="noopener">Three.js Journey</a>
   lessons
 </p>
