Fix html errors in examples

--- a/examples/animation/unfold/index.html
+++ b/examples/animation/unfold/index.html
@@ -25,6 +25,7 @@
             <a-box mixin="board unhinge" color="#7BC8A4" rotation="-180 0 0" animation="delay: 500">
               <a-box mixin="board unhinge" color="#4CC3D9" rotation="-180 0 0" animation="delay: 750">
                 <a-box mixin="board unhinge" color="#93648D" rotation="-180 0 0" animation="delay: 1000">
+                </a-box>
               </a-box>
             </a-box>
           </a-box>
