--- a/examples/showcase/model-viewer/index.html
+++ b/examples/showcase/model-viewer/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
   <title>Model Viewer AR - VR</title>
@@ -28,7 +29,7 @@
       src="https://cdn.aframe.io/examples/ar/models/triceratops/scene.gltf"
       response-type="arraybuffer"></a-asset-item>
 
-    <img id="shadow" src="shadow.png"></img>
+    <img id="shadow" src="shadow.png">
     <a-asset-item id="messageText" src="message.html"></a-asset-item>
   </a-assets>
 </a-scene>
