--- a/examples/test/layer/index.html
+++ b/examples/test/layer/index.html
@@ -20,7 +20,7 @@
           URL:    https://peach.blender.org/
         -->
         <video id="bunny" autoplay preload="auto" loop crossorigin="anonymous" width="1920" height="1080">
-          <source src="https://cdn.aframe.io/videos/bunny.mp4"></source>
+          <source src="https://cdn.aframe.io/videos/bunny.mp4">
         </video>
         <img id="panel" crossOrigin="anonymous" src="panel.png">
         <!--
