--- a/examples/showcase/webgpu/index.html
+++ b/examples/showcase/webgpu/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>WebGPURenderer and TSL • A-Frame</title>
-    <meta name="description" content="WebGPURenderer and TSL • A-Frame" />
+    <meta name="description" content="WebGPU renderer and TSL • A-Frame" />
     <script type="importmap">
       {
         "imports": {
