--- a/examples/showcase/post-processing/index.html
+++ b/examples/showcase/post-processing/index.html
@@ -13,7 +13,7 @@
         }
       }
     </script>
-    <script src="./info-message.js"></script>
+    <script src=".../../js/info-message.js"></script>
     <script type="module" src="./bloom.js"></script>
   </head>
 
