--- a/examples/showcase/post-processing/index.html
+++ b/examples/showcase/post-processing/index.html
@@ -7,9 +7,9 @@
     <script type="importmap">
       {
         "imports": {
-          "aframe": "https://cdn.jsdelivr.net/gh/aframevr/aframe@20cf0f6913708be7a6002869fdeefefde69d7693/dist/aframe-master.module.min.js",
-          "three": "https://cdn.jsdelivr.net/npm/super-three@0.173.1/build/three.module.js",
-          "three/addons/": "https://cdn.jsdelivr.net/npm/super-three@0.173.1/examples/jsm/"
+          "aframe": "../../../dist/aframe-master.module.min.js",
+          "three": "../../../super-three-package/build/three.module.js",
+          "three/addons/": "../../../super-three-package/examples/jsm/",
         }
       }
     </script>
