--- a/examples/index.html
+++ b/examples/index.html
@@ -159,6 +159,7 @@
       <li><a href="mixed-reality/real-world-meshing/">Real World Meshing (Mixed Reality)</a></li>
       <li><a href="boilerplate/importmap/">Importmap (import teapot geometry from three/addons)</a></li>
       <li><a href="showcase/webgpu/">WebGPU renderer and TSL</a></li>
+      <li><a href="showcase/post-processing/">Post-Processing</a></li>
     </ul>
 
     <h2>Examples from Documentation</h2>
