--- a/examples/boilerplate/panorama/index.html
+++ b/examples/boilerplate/panorama/index.html
@@ -15,3 +15,17 @@
     </a-scene>
   </body>
 </html>
+  <head>
+    <meta charset="utf-8">
+    <title>360&deg; Image</title>
+    <meta name="description" content="360&deg; Image - A-Frame">
+    <script src="../../../dist/aframe-master.min.js"></script>
+  </head>
+  <body>
+    <a-scene>
+      <a-sky src="puydesancy.jpg" rotation="0 -130 0"></a-sky>
+
+      <a-text font="kelsonsans" value="Puy de Sancy, France" width="6" position="-2.5 0.25 -1.5"
+              rotation="0 15 0"></a-text>
+    </a-scene>
+  </body>
