Use defer to load any umd script

--- a/examples/showcase/webgpu/index.html
+++ b/examples/showcase/webgpu/index.html
@@ -86,8 +86,8 @@
       });
     </script>
     <script
+      defer
       src="https://cdn.jsdelivr.net/npm/aframe-orbit-controls@1.3.2/dist/aframe-orbit-controls.min.js"
-      type="module"
     ></script>
     <script src="../../js/info-message.js" type="module"></script>
   </head>
