Explain better how to use the hand-menu example

--- a/examples/mixed-reality/watch/message.html
+++ b/examples/mixed-reality/watch/message.html
@@ -3,7 +3,7 @@ It requires a headset and browser with hand tracking support (e.g Meta browser o
 </p>
 
 <p>
-Pinch to open the menu and release to close or select an option. A wrist menu more familiar but often one hand to occludes the other resulting in tracking loss. A palm menu is less intuitive but more robust against occlusion.
+With your right hand hover over your left palm or wrist and pinch to open the menu and release to close or select an option. A wrist menu more familiar but often one hand to occludes the other resulting in tracking loss. A palm menu is less intuitive but more robust against occlusion.
 </p>
 
 <p>
