--- a/examples/index.html
+++ b/examples/index.html
@@ -123,8 +123,8 @@
       <ul id="resources" class="resources">
         <li><a href="https://aframe.io">aframe.io</a></li>
         <li><a href="https://github.com/aframevr">GitHub</a></li>
-        <li><a href="https://aframevr.slack.com/join/shared_invite/zt-f6rne3ly-ekVaBU~Xu~fsZHXr56jacQ">Slack</a></li>
-        <li><a href="https://twitter.com/aframevr">Twitter</a></li>
+        <li><a href="https://aframe.io/community/">Community</a></li>
+        <li><a href="https://x.com/aframevr">X</a></li>
         <li><a href="https://webvr.directory">Showcase Directory</a></li>
       </ul>
     </header>
@@ -157,6 +157,7 @@
       <li><a href="boilerplate/3d-model/">3D Model (glTF)</a></li>
       <li><a href="mixed-reality/anchor/">Anchor (Mixed Reality)</a></li>
       <li><a href="mixed-reality/real-world-meshing/">Real World Meshing (Mixed Reality)</a></li>
+      <li><a href="mixed-reality/watch/">Virtual Watch (Mixed Reality)</a></li>
       <li><a href="boilerplate/importmap/">Importmap (import teapot geometry from three/addons)</a></li>
       <li><a href="showcase/webgpu/">WebGPU renderer and TSL</a></li>
       <li><a href="showcase/post-processing/">Post-Processing</a></li>
