--- a/examples/showcase/webgpu/index.html
+++ b/examples/showcase/webgpu/index.html
@@ -8,10 +8,10 @@
       {
         "imports": {
           "aframe": "../../../dist/aframe-master.module.min.js",
-          "three": "https://cdn.jsdelivr.net/npm/super-three@0.173.4/build/three.webgpu.js",
-          "three/webgpu": "https://cdn.jsdelivr.net/npm/super-three@0.173.4/build/three.webgpu.js",
-          "three/tsl": "https://cdn.jsdelivr.net/npm/super-three@0.173.4/build/three.tsl.js",
-          "three/addons/": "https://cdn.jsdelivr.net/npm/super-three@0.173.4/examples/jsm/"
+          "three": "https://cdn.jsdelivr.net/npm/super-three@0.173.5/build/three.webgpu.js",
+          "three/webgpu": "https://cdn.jsdelivr.net/npm/super-three@0.173.5/build/three.webgpu.js",
+          "three/tsl": "https://cdn.jsdelivr.net/npm/super-three@0.173.5/build/three.tsl.js",
+          "three/addons/": "https://cdn.jsdelivr.net/npm/super-three@0.173.5/examples/jsm/"
         }
       }
     </script>
@@ -86,8 +86,8 @@
       });
     </script>
     <script
+      defer
       src="https://cdn.jsdelivr.net/npm/aframe-orbit-controls@1.3.2/dist/aframe-orbit-controls.min.js"
-      type="module"
     ></script>
     <script src="../../js/info-message.js" type="module"></script>
   </head>
