Rename title and description of the Layer Quad example

--- a/examples/index.html
+++ b/examples/index.html
@@ -189,7 +189,7 @@
       <li><a href="test/gltf-model/">glTF Model</a></li>
       <li><a href="test/gltf-model/draco.html">glTF Model Draco</a></li>
       <li><a href="test/laser-controls/">Laser Controls</a></li>
-      <li><a href="test/layer/">Compositor Layer</a></li>
+      <li><a href="test/layer/">Compositor Layer Quad</a></li>
       <li><a href="test/mixin/">Mixin</a></li>
       <li><a href="test/model/">Model <em>(glTF, OBJ)</em></a></li>
       <li><a href="test/opacity/">Opacity</a></li>
