--- a/examples/test/layer/index.html
+++ b/examples/test/layer/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Compositor Layer Example • A-Frame</title>
-    <meta name="description" content="Hello, World! • A-Frame">
+    <title>Compositor Layer Quad • A-Frame</title>
+    <meta name="description" content="Compositor Layer Quad • A-Frame">
     <script src="../../../dist/aframe-master.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.5.x/dist/aframe-environment-component.min.js"></script>
     <script src="page-turn.js"></script>
