Add Layer Cubemap example to the index.html

--- a/examples/test/layer-cubemap/index.html
+++ b/examples/test/layer-cubemap/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Render the Metaverse • A-Frame</title>
-    <meta name="description" content="Render the Metaverse • A-Frame">
+    <title>Compositor Layer Cubemap • A-Frame</title>
+    <meta name="description" content="Compositor Layer Cubemap • A-Frame">
     <script src="../../../dist/aframe-master.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.5.0/dist/aframe-environment-component.min.js"></script>
     <script src="../../js/info-message.js"></script>
