Add link to tweet

--- a/examples/test/layer-cubemap/message.html
+++ b/examples/test/layer-cubemap/message.html
@@ -1,5 +1,7 @@
 <p>This demo relies on the <a href="https://immersive-web.github.io/layers/">WebXR layers API</a>. The standard is still a proposal and support might vary accross browsers.</a></p>
 
+<p><a href="https://x.com/dmarcos/status/1731813890307260419" target="_blank">See video</a></p>
+
 <p>
 Featuring the following amazing pieces and artists:</br>
 <a style="font-weight: bold" href="https://render.otoy.com/vr_gallery.php?sortBy=date_z&searchTerm=imagine&showMonth=all&show_wip=0">Imagined Reality</a> by <a href="https://render.otoy.com/forum/memberlist.php?mode=viewprofile&u=226897">california_ben</a>, <a style="font-weight: bold" href="https://render.otoy.com/vr_gallery.php?sortBy=date_z&searchTerm=realization&showMonth=all&show_wip=0">Realization</a> by <a href="https://render.otoy.com/forum/memberlist.php?mode=viewprofile&u=150294
