Move test/layer-cubemap to showcase directory

--- a/examples/index.html
+++ b/examples/index.html
@@ -162,7 +162,7 @@
       <li><a href="showcase/webgpu/">WebGPU renderer and TSL</a></li>
       <li><a href="showcase/post-processing/">Post-Processing</a></li>
       <li><a href="test/layer/">Compositor Layer Quad</a></li>
-      <li><a href="test/layer-cubemap/">Compositor Layer Cubemap</a></li>
+      <li><a href="showcase/layer-cubemap/">Compositor Layer Cubemap</a></li>
     </ul>
 
     <h2>Examples from Documentation</h2>
