--- a/examples/index.html
+++ b/examples/index.html
@@ -161,6 +161,7 @@
       <li><a href="boilerplate/importmap/">Importmap (import teapot geometry from three/addons)</a></li>
       <li><a href="showcase/webgpu/">WebGPU renderer and TSL</a></li>
       <li><a href="showcase/post-processing/">Post-Processing</a></li>
+      <li><a href="showcase/layer-cubemap/">Compositor Layer Cubemap</a></li>
     </ul>
 
     <h2>Examples from Documentation</h2>
@@ -189,7 +190,7 @@
       <li><a href="test/gltf-model/">glTF Model</a></li>
       <li><a href="test/gltf-model/draco.html">glTF Model Draco</a></li>
       <li><a href="test/laser-controls/">Laser Controls</a></li>
-      <li><a href="test/layer/">Compositor Layer</a></li>
+      <li><a href="test/layer/">Compositor Layer Quad</a></li>
       <li><a href="test/mixin/">Mixin</a></li>
       <li><a href="test/model/">Model <em>(glTF, OBJ)</em></a></li>
       <li><a href="test/opacity/">Opacity</a></li>
