Replace glitch cdn url by aframe cdn for grip-compressed.glb

--- a/examples/test/model/index.html
+++ b/examples/test/model/index.html
@@ -12,7 +12,7 @@
         <a-asset-item id="crate-obj" src="../../assets/models/crate/crate.obj"></a-asset-item>
         <a-asset-item id="crate-mtl" src="../../assets/models/crate/crate.mtl"></a-asset-item>
         <a-asset-item id="brainstem" src="https://cdn.aframe.io/test-models/models/glTF-2.0/brainstem/BrainStem.gltf"></a-asset-item>
-        <a-asset-item id="putter-grip" src="https://cdn.glitch.global/f43e6264-95fc-43e8-8049-dc53b985b1e3/grip-compressed.glb?v=1661368839319"></a-asset-item>
+        <a-asset-item id="putter-grip" src="https://cdn.aframe.io/test-models/models/glTF-2.0/grip-compressed.glb"></a-asset-item>
       </a-assets>
 
       <a-entity position="0 0 -12">
